Detect/report animations that are cancelled after they start.

Previously, we were early-exiting from |animationPlayStateChange| if an
animation was contained in |m_idToAnimation|. However, this means that
we miss cancel events for animations that have already been started,
since the 'start' event causes them to be placed in |m_idToAnimation|.

BUG=686091

Review-Url: https://codereview.chromium.org/2656273003
Cr-Commit-Position: refs/heads/master@{#447074}

Former-commit-id: e04864cab7755bdc01abf0431cfd825d488b309c